# AspireAppExample

./: .gitignore  AspireApp1.slnx  CONCLUSION_TELEMETRIA_WEB.md  INFRASTRUCTURE_README.md  OPENTELEMETRY_VUE_SETUP.md  README_TRAZAS.md  RESUMEN_FINAL.md  SOLUCION_FASTAPI_TRAZAS.md  SOLUCION_PROXY.md  TELEMETRY_FIX.md  VERIFICAR_TRAZAS_FASTAPI.md
AspireApp1.AppHost/: AppHost.cs  AspireApp1.AppHost.csproj
AspireApp1.AppHost/Properties/: launchSettings.json
AspireApp1.Web/: .env.example  .gitignore  ASPIRE_SETUP.md  AspireApp1.Web.esproj  CHECKLIST.md  README.md  diagnostico.ps1  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
AspireApp1.Web/public/: diagnostico.html  diagnostico.js  test-env.html
AspireApp1.Web/src/: App.vue  main.ts  style.css  telemetry-helpers.ts  telemetry.ts  vite-env.d.ts
DotNetApi/: DotNetApi.csproj  Program.cs
DotNetApi/Data/: AppDbContext.cs
DotNetApi/Properties/: launchSettings.json
FastApiService/: FastApiService.pyproj  INTEGRATION_EXAMPLE.md  POSTGRESQL_SETUP.md  README.md  main.py  main.py.backup  pyproject.toml  requirements.txt  telemetry.py
